<resources>
    <string name="app_name">Mobile Workforce</string>
    <string name="anim_duration_slide">300</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBz6b_sHuaTJDVidioPvtpjD0c_-vKwOGo</string>
    <string name="hintSearchVisiting">Cari kunjungan</string>
    <string name="labelTitleMyAssignment">Kunjungan saya</string>
    <string name="labelTitleDiaalog">Title dialog</string>
    <string name="labelBtnCancel">Batal</string>
    <string name="labelBtnStart">Mulai</string>
    <string name="labelTitlePageAssignmentDetail">Detail Kunjungan</string>
    <string name="labelAddPicture">Tambah gambar</string>
    <string name="labelAddSignature">Tambah tanda tangan</string>
    <string name="hintUserName">Alamat email</string>
    <string name="labelTitileLogin">Login</string>
    <string name="hintPassword">Kata sandi</string>
    <string name="labelBtnLogin">Login</string>
    <string name="labelForgotPassword">Lupa kata sandi?</string>
    <string name="errorMessageEmptyEmailAddress">Alamat email tidak boleh kosong</string>
    <string name="errorMessageEmptyPassword">Kata sandi tidak boleh kosong</string>
    <string name="errorMessageEmailNotValid">Alamat email tidak valid</string>
    <string name="errorMessageMinimumPassword">Kata sandi harus minimal 6 karakter</string>
    <string name="errorMessageComingSoon">Cooming soon</string>
    <string name="labelOcupation">Jabatan</string>
    <string name="labelPosition">Posisi</string>
    <string name="labelPhoneNumber">Nomor telepon</string>
    <string name="labelMainOffice">Main office</string>
    <string name="labelMobilePhone">Pribadi</string>
    <string name="labelEmailAddress">Alamat email</string>
    <string name="labelPrimaryEmail">Email utama</string>
    <string name="alertMesageNoInternetConnection">Tidak ada koneksi internet</string>
    <string name="alertMessageNeedGPSAccess">Aplikasi membutuhkan akses gps</string>
    <string name="Ok">Oke</string>
    <string name="labelConfirmCheckOut">Yakin ingin sudahi bekerja hari ini?</string>
    <string name="labelStartWork">Mulai bekerja</string>
    <string name="labelStopWork">Sudahi bekerja hari ini</string>
    <string name="labelStartWorkGreating"><![CDATA[Kamu belum check in untuk hari ini, <br>silahkan tekan tombol <b> Mulai bekerja </b>]]></string>
    <string name="labelStartWorkCongrats"><![CDATA[Semoga hari kamu menyenangkan, <br><b>Selamat bekerja </b>]]></string>
    <string name="labelBtnSend">Kirim</string>
    <string name="labelBtnSendNow">Kirim sekarang</string>
    <string name="labelReserPassword">Link untuk mengatur ulang kata sandi akan dikirim ke alamat email Anda</string>
    <string name="labelConfirmCompleteTask">Anda yakin ingin menyelesaikan kunjungan ini?</string>
    <string name="labelGoodRest"><![CDATA[Kamu bekerja dengan baik hari ini, <br><b>Selamat istirahat</b>]]></string>
    <string name="labelFinishAssignment">Selesaikan kunjungan</string>
    <string name="labelAssignmentFinished">Kamu sudah menyelesaikan kunjungan ini</string>
    <string name="labelAssignmentNotStart">Kamu belum memulai kunjungan</string>
    <string name="labelEmptyAssisgnmentOnProgress">Tidak ada kunjungan berjalan</string>
    <string name="labelEmptyAssisgnmentOnComplete">Tidak ada kunjungan selesai</string>
    <string name="labelInvoiceStep1">Pilih penagihan</string>
    <string name="labelInvoiceStep2">Masukkan tagihan</string>
    <string name="labelBtnNext">Lanjut</string>
    <string name="labelBtnPrevious">Kembali</string>
    <string name="labelCash">Cash</string>
    <string name="hintCash">Masukkan tagihan cash</string>
    <string name="labelTransfer">Transfer</string>
    <string name="hintChooseBank">Pilih bank</string>
    <string name="hintInputTransfer">Masukkan jumlah transfer</string>
    <string name="labelGiro">Giro</string>
    <string name="hintGiro">Masukkan nilai giro</string>
    <string name="hintNoGiro">No. Giro</string>
    <string name="labelSisa">Sisa</string>
    <string name="labelAddGiro">Foto giro</string>
    <string name="labelVerificationFakturInput">Masukkan kode verifikasi\nyang dikirim ke nomor pelanggan</string>
    <string name="labelBtnConfirmation">Konfirmasi</string>
    <string name="labelTotalNotaPembayaran">Nota pembayaran</string>
    <string name="labelTotalNotaTagihan">Nota tagihan</string>
    <string name="labelMetodePembayaran">Pembayaran</string>
    <string name="labelTotal">Total</string>
    <string name="labelSelectBank">Pilih bank</string>
    <string name="labelOk">Oke</string>
    <string name="labelSubmit">Submit</string>
    <string name="labelTotalTertagih">Tertagih</string>
    <string name="labelTotalNotaKredit">Nota kredit</string>
    <string name="hintMetodePembayaran">Metode pembayaran</string>
    <string name="labelGiroPhoto">Foto giro</string>
    <string name="labelSave">Simpan</string>
    <string name="labelTitleInvoiceChooseFaktur">Pilih Penagihan</string>
    <string name="labelTitleInvoicePayment">Proses Faktur</string>
    <string name="hintPaymentMethod">Pilih metode pembayaran</string>
    <string name="labelSelect">Pilih</string>
    <string name="errorMessageNotEmpty"> tidak boleh kosong</string>
    <string name="errorMessageEmptyCash">Jumlah cash tidak boleh kosong</string>
    <string name="errorMessageEmptyTransfer">Jumlah transfer tidak boleh kosong</string>
    <string name="emptyMessageEmptyGiro">Nilai giro tidak boleh kosong</string>
    <string name="labelInvoiceTitleVerification">Verifikasi</string>
    <string name="hintBank">Pilih bank</string>
    <string name="labelInputInvoice">Masukkan invoice</string>
    <string name="labelProcessInvoice">Proses invoice</string>
    <string name="alertMessageEmptyBank">Silahkan pilih bank terlebih dulu</string>
    <string name="alertMssageEmptyNoGiro">Nomor giro tidak boleh kosong</string>
    <string name="alertMessageEmptyGiroPhoto">Silahkan ambil foto giro terlebih dulu</string>
    <string name="labelResendOTPRequest">Kirim ulang kode verifikasi</string>
    <string name="labelInvoiceProcessSuccess">Proses invoice sukses</string>
    <string name="labelSuccess">Sukses</string>
    <string name="labelTItleAssignmentSearch">Hasil pencarian</string>
    <string name="labelEmptyAssisgnmentSearch">Pencarian tidak ditemukan</string>
    <string name="alertMessageOTPCodeEmpty">Kode verifikasi tidak boleh kosong</string>
    <string name="labelSkipVerification">Lewati verifikasi</string>
    <string name="hintSelectAgent">Pilih agen</string>
    <string name="labelAgent">Agent</string>
    <string name="hintAttendanceAsSPV">Bekerja sebagai SPV</string>
    <string name="hintAttendanceAsDriver">Bekerja sebagai driver</string>
    <string name="hintInputKm">Masukan kilo meter awal</string>
    <string name="alertMessageInputKmEmpty">Kilometer awal tidak boleh kosong</string>
    <string name="labelNowAssignment">Kunjungan hari ini</string>
    <string name="labelSeeAll">Lihat semua</string>
    <string name="alertMessageAgentSelectedEmpty">Silahkan pilih sales terlebih dulu</string>
    <string name="alertMessageCantInputCash">Tidak dapat memasukan pembayaran cash lagi</string>
    <string name="alertMessageCantInputTransfer">Tidak dapat memasukan pembayaran transfer lagi</string>
    <string name="alertMessageCantInputGiro">Tidak dapat memasukan pembayaran giro lagi</string>
    <string name="labelEdit">Edit</string>
    <string name="labelDelete">Hapus</string>
    <string name="hintGasolineInput">Isi bahan bakar</string>
    <string name="hintInputLiter">Masukan jumlah liter</string>
    <string name="hintGasolineBill">Foto bon pengisian bahan bakar</string>
    <string name="hintNote">Catatan</string>
    <string name="hintSPBUAddress">Alamat SPBU</string>
    <string name="hintSelectSales">Pilih sales</string>
    <string name="alertMessageSalesSelectedEmpty">Silahkan pilih sales terlebih dulu</string>
    <string name="hintWithSales">Dengan sales</string>
    <string name="alertMessageLiterEmpty">Jumlah liter tidak boleh kosong</string>
    <string name="alertMessageGasolineBillEmpty">Foto bon pengisian bahan bakar terlebih dulu</string>
    <string name="alertMessageInputLastKmEmpty">Masukkan kilo meter akhir</string>
    <string name="hintGiroDueDate">Waktu jatuh tempo</string>
    <string name="alertMessageGiroDueDateEmpty">Waktu jatuh tempo tidak boleh kosong</string>
    <string name="labelProcessAssignment">Proses kunjungan</string>
    <string name="labelTitleAssignmentActivity">Aktivitas Kunjungan</string>
    <string name="labelBtnDone">Selesai</string>
    <string name="labelTitleOrderProduct">Order Produk</string>
    <string name="alertMessageAssignmentActivityNotComplete">Silahkan selesaikan semua aktivitas kunjungan</string>
    <string name="hintInputGasolineAmount">Masukan jumlah bayar</string>
    <string name="alertMessageGasolineAmountEmpty">Jumlah bayar tidak boleh kosong</string>
    <string name="labelNowNews">Berita hari ini</string>
    <string name="hintStoreName">Masukan nama toko *</string>
    <string name="hintKabupaten">Masukan nama kabupaten/kota *</string>
    <string name="hintKecamatan">Masukan nama kecamatan *</string>
    <string name="hintAdress">Masukan alamat toko *</string>
    <string name="hintKelurahan">Masukan nama kelurahan/desa *</string>
    <string name="labelStoreData">Data Toko</string>
    <string name="labelOwnerData">Pemilik Toko</string>
    <string name="hintOwnerName">Masukan nama pemilik toko</string>
    <string name="hintOwnerAdress">Masukan alamat pemilik toko</string>
    <string name="hintOwnerPhone">Masukan telepon pemilik toko</string>
    <string name="labelPenanggungJawabData">Penanggung Jawab Toko</string>
    <string name="hintPenanggungJawabName">Masukan nama penanggung jawab toko</string>
    <string name="hintPenanggungJawabPhone">Masukan telepon penanggung jawab toko</string>
    <string name="hintStoreStatus">Status toko</string>
    <string name="hintStoreType">Jenis toko</string>
    <string name="hintYearOfStore">Masukan lama toko berjualan (tahun) *</string>
    <string name="hintLebarJalan">Masukan lebar jalan</string>
    <string name="hintBannerStore">Plang/Branding *</string>
    <string name="hintKTPNumber">Masukan Nomor KTP</string>
    <string name="hintNoteStore">Masukan catatan: Diisi data-data yang memudahkan pengambilan keputusan pemberian limit kredit seperti misal, jumlah cabang/keagenan yang dimiliki / pedagang aktif dan pasif</string>
    <string name="labelDataPendukung">Data pendukung</string>
    <string name="labelKTP">KTP</string>
    <string name="labelNPWP">NPWP</string>
    <string name="hintNPWPNumber">Masukan nomor NPWP</string>
    <string name="hintAssignmentFailed">Kunjungan batal</string>
    <string name="hintFailedReason">Pilih alasan kunjungan batal</string>
    <string name="labelStorePhoto">Foto toko</string>
    <string name="labelBannerStorePhoto">Foto banner toko</string>
    <string name="labelSuccessAddStore">Memambahkan toko sukses</string>
    <string name="alertMessageStoreNameEmpty">Nama toko tidak boleh kosong</string>
    <string name="alertMessageStoreAddressEmpty">Alamat toko tidak boleh kosong</string>
    <string name="alertMessageStoreKabupatenEmpty">Nama kabupaten tidak boleh kosong</string>
    <string name="alertMessageStoreKelurahanEmpty">Nama kelurahan tidak boleh kosong</string>
    <string name="alertMessageStoreKecamatanEmpty">Nama kecamatan tidak boleh kosong</string>
    <string name="alertMessageStoreStatusEmpty">Pilih status toko terlebih dahulu</string>
    <string name="alertMessageStoreTypeEmpty">Pilih tipe toko lerlebih dahulu</string>
    <string name="alertMessageStoreYearEmpty">Lama toko berjualan tidak boleh kosong</string>
    <string name="alertMessageBannerEmpty">Plang/branding tidak boleh kosong</string>
    <string name="alertMessageStorePhotoEmpty">Pilih foto toko terlebih dahulu</string>
</resources>