<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/marginM"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="@dimen/iconSizeL"
            android:layout_height="@dimen/iconSizeL"
            android:padding="@dimen/paddingS"
            android:src="@drawable/ic_close_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingM"
            android:paddingLeft="@dimen/paddingM"
            android:paddingRight="@dimen/paddingM">

            <TextView
                android:layout_marginTop="@dimen/marginM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/bold"
                android:text="@string/hintAttendanceAsSPV"
                android:textColor="@color/colorGreyDark"
                android:textSize="@dimen/fontXL" />

            <LinearLayout
                android:layout_marginTop="@dimen/marginM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxWithSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginLeft="@dimen/marginS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/hintWithSales"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/fontL" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/containerSelectSales"
                android:layout_marginTop="@dimen/marginS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingS"
                android:paddingBottom="@dimen/paddingS">

                <TextView
                    android:id="@+id/txtAgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/hintSelectSales"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/fontL" />

                <ImageView
                    android:layout_width="@dimen/iconSizeM"
                    android:layout_height="@dimen/iconSizeM"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_down_grey" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalHeight"
                android:layout_marginTop="@dimen/marginM"
                android:background="@drawable/bg_btn_green">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bold"
                    android:text="@string/labelSave"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fontL" />
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="@dimen/iconSizeL"
        android:layout_height="@dimen/iconSizeL"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
